--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,8 @@
-baseURL = "https://recipesbook.netlify.com/"
+baseURL = "https://iiacoban42.github.io/recipe-book/"
 languageCode = "en-us"
-title = "Jason's Recipe Book"
+title = "Tasty Bytes 🔥"
 theme = "recipes"
 
 [params]
-  author = "Jason Rametta"
-  description = "Jason's Recipe Book"
+  author = "iiacoban42"
+  description = "Tasty Bytes"
